--- a/src/index.html
+++ b/src/index.html
@@ -2,78 +2,39 @@
 
 <html>
   <head>
-    <script type="module" src="./example.ts"></script>
-    <link href="style.css" rel="stylesheet" />
+    <script type="module" src="./example_v2.ts"></script>
+    <link href="style2.css" rel="stylesheet" />
   </head>
 
   <body>
     <div class="container">
-      <canvas id="game-canvas"></canvas>
+      <canvas height="500" width="500" style="background-color: black;"></canvas>
       <div class="controls">
-        <details open>
-          <summary>Player</summary>
-          <div class="components">
-            <div>
-              <label class="label-header">Renderer</label>
-              <input checked id="player-renderer" type="checkbox" />
-              <div id="player-renderer-container" class="detail-input">
-                <label>Size</label>
-                <input id="player-renderer-size" type="range" min="0" max="100" value="10" />
-              </div>
-            </div>
-            <div>
-              <label class="label-header">Controls</label>
-              <input checked id="player-controls" type="checkbox" />
-              <div id="player-controls-container" class="detail-input">
-                <label>Speed (arrow keys to move)</label>
-                <input id="player-controls-speed" value="2" type="range" min="0" max="10" />
-                <label>Run speed (hold Spacebar)</label>
-                <input id="player-controls-run-speed" value="5" type="range" min="0" max="10" />
-              </div>
-            </div>
+        <div class="checkboxes">
+          <div class="checkbox-container">
+            <label>Gravity</label>
+            <input type="checkbox" />
           </div>
-          <code id="player-code-snippet"></code>
-        </details>
-        <details open>
-          <summary>Enemy</summary>
-          <div class="components">
-            <div>
-              <label class="label-header">Renderer</label>
-              <input checked id="enemy-renderer" type="checkbox" />
-              <div id="enemy-renderer-container" class="detail-input">
-                <label>Size</label>
-                <input id="enemy-renderer-size" type="range" min="0" max="100" value="20" />
-              </div>
-            </div>
-            <div>
-              <label class="label-header">Collision</label>
-              <input checked id="enemy-collision" type="checkbox" />
-            </div>
-            <div>
-              <label class="label-header">Grow (on collision)</label>
-              <input checked id="enemy-grow" type="checkbox" />
-              <div id="enemy-grow-container" class="detail-input">
-                <label>Speed</label>
-                <input id="enemy-grow-speed" value="0.1" type="range" min="0" max="10" />
-                <label>Max grow size</label>
-                <input id="enemy-grow-maxSize" value="50" type="range" min="20" max="100" />
-              </div>
-            </div>
-            <div>
-              <label class="label-header">Jitter (on collision)</label>
-              <input checked id="enemy-jitter" type="checkbox" />
-            </div>
-            <div>
-              <label class="label-header">Color Flash (on collision)</label>
-              <input checked id="enemy-color" type="checkbox" />
-              <div id="enemy-color-container" class="detail-input">
-                <label>Speed (lower is faster)</label>
-                <input id="enemy-color-speed" value="200" type="range" min="20" max="500" />
-              </div>
-            </div>
+          <div class="checkbox-container">
+            <label>Collision</label>
+            <input type="checkbox" />
           </div>
-          <code id="enemy-code-snippet"></code>
-        </details>
+          <div class="checkbox-container">
+            <label>Jitter</label>
+            <input type="checkbox" />
+          </div>
+        </div>
+        <div class="buttons">
+          <button id="random-box-button">
+            Add 1 random Box
+          </button>
+          <button id="random-box-button-50">
+            Add 50 random Boxes
+          </button>
+          <button id="reset-button">
+            Reset
+          </button>
+        </div>
       </div>
     </div>
   </body>
