--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 
 <html>
   <head>
-    <script type="module" src="./example_v2.ts"></script>
-    <link href="style2.css" rel="stylesheet" />
+    <script type="module" src="./example.ts"></script>
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -13,15 +13,15 @@
         <div class="checkboxes">
           <div class="checkbox-container">
             <label>Gravity</label>
-            <input type="checkbox" />
+            <input id="gravity-checkbox" checked type="checkbox" />
           </div>
           <div class="checkbox-container">
             <label>Collision</label>
-            <input type="checkbox" />
+            <input id="collision-checkbox" checked type="checkbox" />
           </div>
           <div class="checkbox-container">
             <label>Jitter</label>
-            <input type="checkbox" />
+            <input id="jitter-checkbox" type="checkbox" />
           </div>
         </div>
         <div class="buttons">
